Fix chart spacing

--- a/brain-tag/src/Views/Components/Channels/index.css
+++ b/brain-tag/src/Views/Components/Channels/index.css
@@ -13,8 +13,6 @@
     margin: 0 auto;
     align-items: center;
     font-size: 2em;
-    margin-top: 40px;
-    margin-bottom: 40px;
 }
 
 
